# kate-ollama-kf5

./: CMakeLists.txt  README.md
src/: plugin.cpp  plugin.h  settings.cpp  settings.h
